# jbiophysic

./: .gitignore  Detailed_Long_Instructions_For_GCLI.md  README.md  __init__.py  api.py  app.py  build_manuscript.py  compose.py  config.md  export.py  gemini.md  inspect_df_columns.py  inspect_params_final.py  jbp_dashboard.html  pyproject.toml  replicate_spectrolaminar_motif.py  test_jaxley_set.py  test_stim_shape.py
.claude/: CLAUDE.md  REFACTORING_COMPLETE.md  jaxfne_refactoring_status.md  v0_0_atlas_doctrine.md
.claude/skills/: README.md
channels/: __init__.py  neuromodulators.py
cli/: gravia_write.py  main.py
codes/: hierarchy.py  modulation.py  neurons.py  plasticity.py  simulation.py  synapses.py
configs/: experiment.yaml  jtfne_spectrolaminar_correct.yaml  jtfne_spectrolaminar_inverse.yaml  omission_model_lite.yaml  tfne_spectrolaminar_motif.yaml
core/: README.md  __init__.py  config_loader.py
docs/: JTFNE_SPECTROLAMINAR_ALIGNMENT.md  SCIENTIFIC_GUARDRAILS.md  cortex_network_builder.md  jax_compatibility.md  jaxfne_backend_guide.md  jaxfne_playground.md  jaxfne_usage_refactor_inventory.md  roadmap.md  v0_1_units_doctrine.md  v0_2_exercises.md  v0_2_jaxfne_bridge.md  v0_2_membrane_doctrine.md  v0_3_hodgkin_huxley_doctrine.md
examples/: jaxfne_playground_smoke.py  jaxfne_workflow_example.py  jtfne_spectrolaminar_smoke.py  performance_benchmark.py  plot_laminar_circuit_3d.py  plot_tfne_izhikevich_laminar_ei100.py  tfne_izhikevich_laminar_ei100.py  v036_100neuron_ei_population.py  v0_1_units_timestep_sweep.py  v0_1_wrong_units_null.py  v0_2_passive_membrane_minimal.py
jbiophysics/: README.md  __init__.py  api.py  compose.py  export.py  index.html  requirements.txt
manuscript/: build.py  main.tex
misc/: biophys_jx_gsdr_long.py  final_params_40hz_finetuned.pkl  gemini.md  optimal_params_40hz.pkl  pyproject.toml
misc/data/: README.md
misc/data/txt/: finetune_log.txt  kappa_0_log.txt
misc/legacy_gsdr/: README.md
modules/: __init__.py  cortical.py  hierarchy.py  omission.py
networks/: omission.py  v1.py
neurons/: cortical.py
optimize/: agsdr.py
optimizers/: gsdr.py  sdr.py
pipeline/: generate_figures.py  generate_phase_plot.py  load_data.py  run_analysis.py  run_simulation.py  run_training.py
plans/: plan_1_baseline.md  plan_2_pathology.md  plan_3_ghost_signal.md  plan_4_sensitivity.md  plan_5_precision_execution.md
results/: REPORT.md
scratch/: verify_fixes.py
scripts/: README.md  build_html_report.py  generate_report_data.py  plan_1_init_hierarchy.py  plan_1_step_8_lag_tuning.py  plan_1_step_9_gamma_calibration.py  replicate_spectrolaminar_motif.py  run_omission_model_lite.py  run_omission_trial.py  run_optimization_campaign.py  run_spectrolaminar_suite.py  run_stage2_bridge_figure_smoke.py
skill-templates/: new_mechanism.md
skills/: README.md  analysis-jbiophysics-api-dashboard.md  coding-jbiophysics-core-modeling.md  science-jbiophysics-omission-paradigm.md
synapses/: graded.py
systems/: README.md
tests/: conftest.py  test_analysis.py  test_cortex_network_builder.py  test_edge_backend.py  test_foundation.py  test_import_smoke.py  test_imports.py  test_izhikevich_eig_network.py  test_jaxfne_advanced.py  test_jaxfne_integration.py  test_jaxfne_playgrounds.py  test_objectives.py  test_optim_network_pipeline.py  test_passive_membrane_chapter2.py  test_passive_membrane_chapter2_final.py  test_simplified_api_imports.py  test_simplified_api_ops.py  test_simulation.py  test_smoke.py  test_tfne_p0_invariants.py  test_tfne_tensors_fields.py  test_toolbox_suite.py  test_units.py  test_units_chapter1.py  test_viz_jvis.py  verify_biophysics.py
tools/: check_toml.py  migrate_logging.py
tutorials/: 00_neuronal_equations_book.ipynb  01_izhikevich_hh_single_neurons.ipynb  02_tfne_forward_fields.ipynb  03_tfne_izhikevich_hybrid.ipynb  04_laminar_oddball_three_area_cortex.ipynb  05_jtfne_spectrolaminar_correct.ipynb  05_jtfne_spectrolaminar_inverse.ipynb  README.md  colab_jaxfne_computational_biophysics_tutorial.ipynb  v0_2_passive_membrane_tutorial.ipynb
utils/: math.py  metrics.py
viz/: omission_viz.py
(+383 files in other folders)
