[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jbiophysic"
version = "1.1.1"
description = "Experimental JAX/Jaxley-oriented cortical biophysics, TFNE forward fields, and laminar oddball modeling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hamed Nejat" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
jax = [
  "jax>=0.4",
  "jaxlib>=0.4",
  "equinox>=0.11",
  "optax>=0.2",
  "diffrax>=0.5",
]
jaxfne = [
  "jaxfne==0.2.30",
]
jaxley = [
  "jaxley>=0.13",
]
viz = [
  "matplotlib>=3.8",
  "plotly>=5.0",
  "dash>=2.0",
]
tutorials = [
  "jupyter>=1.0",
  "nbformat>=5.9",
  "nbconvert>=7.0",
  "ipykernel>=6.0",
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
]
all = [
  "jbiophysic[jax,jaxfne,jaxley,viz,tutorials,dev]",
]

[project.scripts]
jbiophysic = "jbiophysic.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jbiophysic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []


[tool.ruff.lint.isort]
known-first-party = ["jbiophysic"]
